; ModuleID = '/home/carl/AnghaBench/lab/q3map2/common/extr_unzip.c_fclose_ql.c'
source_filename = "/home/carl/AnghaBench/lab/q3map2/common/extr_unzip.c_fclose_ql.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@xor_max_pos = common dso_local global i32 0, align 4
@xored_open_files = common dso_local global i32** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fclose_ql(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 0, i32* %4, align 4
  br label %5

5:                                                ; preds = %30, %1
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @xor_max_pos, align 4
  %8 = icmp sle i32 %6, %7
  br i1 %8, label %9, label %33

9:                                                ; preds = %5
  %10 = load i32**, i32*** @xored_open_files, align 8
  %11 = load i32, i32* %4, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds i32*, i32** %10, i64 %12
  %14 = load i32*, i32** %13, align 8
  %15 = load i32*, i32** %2, align 8
  %16 = icmp eq i32* %14, %15
  br i1 %16, label %17, label %29

17:                                               ; preds = %9
  %18 = load i32**, i32*** @xored_open_files, align 8
  %19 = load i32, i32* %4, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i32*, i32** %18, i64 %20
  store i32* null, i32** %21, align 8
  %22 = load i32, i32* %4, align 4
  %23 = load i32, i32* @xor_max_pos, align 4
  %24 = icmp eq i32 %22, %23
  br i1 %24, label %25, label %28

25:                                               ; preds = %17
  %26 = load i32, i32* @xor_max_pos, align 4
  %27 = add nsw i32 %26, -1
  store i32 %27, i32* @xor_max_pos, align 4
  br label %28

28:                                               ; preds = %25, %17
  br label %33

29:                                               ; preds = %9
  br label %30

30:                                               ; preds = %29
  %31 = load i32, i32* %4, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %4, align 4
  br label %5

33:                                               ; preds = %28, %5
  %34 = load i32*, i32** %2, align 8
  %35 = call i32 @fclose(i32* %34)
  store i32 %35, i32* %3, align 4
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
